...
          icon: Icons.edit_outlined,
          onPressed: () {
            HapticService.lightTap();
            _editAlbum();
          },
          appBarStyle: appBarStyle,
          tooltip: '앨범 수정',
        ),
        _buildTopBarIconButton(
          icon: Icons.delete_outline,
          onPressed: () {
            HapticService.warning();
            _deleteAlbum();
...
